Fix scroll behaviour in retrieve, to avoid wrapping XML

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 /* #publicationslist #olderpublications {opacity: 0.5;} */
 #symplecticpublicationsclient #publicationslist ul li {text-align: left;}
 #symplecticpublicationsclient #publicationslist ul li img.favourite, #symplecticpublicationsclient img.favourite {position: relative; top: -2px;}
-#symplecticpublicationsclient div.code {white-space: nowrap; overflow-x: scroll;}
+#symplecticpublicationsclient div.code pre {white-space: pre; overflow-x: scroll;}
 #symplecticpublicationsclient table.statistics th {background-color: #f7f7f7;}
 #symplecticpublicationsclient table.statistics td {min-width: 60px; padding-right: 1.5em;}
 #symplecticpublicationsclient .datefilter {clear: right; float: right; width: 18em; margin-left: 25px;}
